[package]
name = "triple_triads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]